<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondoibero"
    tools:context=".AboutActivity" >
    
    <TextView
        android:id="@+id/TextUIA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/UIA1"
        android:textColor="@color/coco"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/TextUIA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextUIA1"
        android:layout_centerHorizontal="true"
        android:text="@string/UIA2"
        android:textColor="@color/coco"
        android:textSize="22sp" />
    
   <TextView
        android:id="@+id/TextVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextUIA2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Version"
        android:textColor="@color/coco"
        android:textSize="18sp" />
   <TextView
        android:id="@+id/TextDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextVersion"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Developer"
        android:textColor="@color/coco"
        android:textSize="22sp" />
   
   <TextView
        android:id="@+id/TextMainDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextDeveloper"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/MainDeveloper"
        android:textColor="@color/coco"
        android:textSize="20sp" />
   <TextView
        android:id="@+id/TextSecondDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextMainDeveloper"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/SecondDeveloper"
        android:textColor="@color/coco"
        android:textSize="20sp" />
   
   <TextView
        android:id="@+id/TextThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/LASGRACIAS2"
        android:textColor="@color/coco"
        android:textSize="22sp" />
   
   <TextView
        android:id="@+id/TextThanks2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextThanks"
        android:layout_centerHorizontal="true"
        android:text="@string/LASGRACIAS1"
        android:textColor="@color/coco"
        android:textSize="22sp" />

</RelativeLayout>